syntax = "proto3";

//This .proto file is intended for use both by the microcontroller and the brain

enum currentStatus{
    OK = 0;
    ERROR = 1;
}

//Only the brain sends requests
message ResetRequest {
float maxCartX = 1;
float maxCartV = 2;
float maxCartA = 3;
float hwMaxX = 4;
float hwMaxV = 5;
float hwMaxA = 6;
float maxThresholdX= 7;
float maxThresholdV = 8;
float maxThresholdA = 9;
}
message GetStateSetTargetRequest{
float  TARGET_X = 1;
float TARGET_V = 2;
float TARGET_A = 3;
}

//Only the controller responds
message ResetResponse {
float maxCartX = 1;
float maxCartV = 2;
float maxCartA = 3;
float hwMaxX = 4;
float hwMaxV = 5;
float hwMaxA = 6;
float maxThresholdX= 7;
float maxThresholdV = 8;
float maxThresholdA = 9;
//TODO:debug led?
}

message GetStateSetTargetResponse {
float currCartX= 1; // current cart position float 
float currCartV= 2; // current cart velocity float 
float currCartA = 3; // current cart acceleration
float currPoleAngle = 4; // current pole angle
float currPoleV = 5; // current pole angular velocity
float currImuA = 6; // current IMU measured cart acceleration
float currMotorX = 7; // current motor shaft position (radians)
float currMotorV = 8; // motor shaft velocity (rad/sec)
//TODO: error code field?
}